完善index.html目录结构

--- a/WebGL示例程序/index.html
+++ b/WebGL示例程序/index.html
@@ -45,6 +45,7 @@
     <a>灯光-点光源</a>
     <a>灯光-聚光灯</a>
     <a>文件处理-OBJ文件</a>
+    <a>3D技术-层次模型</a>
     <canvas class="cs"></canvas>
     <script type="module" src="./modules/index.js"></script>
 </body>
